--- a/package.json
+++ b/package.json
@@ -25,8 +25,12 @@
     "@popperjs/core": "^2.5.3",
     "bootstrap": "^4.5.2",
     "firebase": "^7.13.1",
+    "html2pdf.js": "^0.9.2",
     "jquery": "^3.5.1",
+    "jspdf": "^2.1.1",
     "ngx-toastr": "^13.0.0",
+    "pdfmake": "^0.1.68",
+    "pdfmake-wrapper": "^2.0.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
